--- a/components/SiteNavi/style.css
+++ b/components/SiteNavi/style.css
@@ -4,12 +4,14 @@
     height: 100%;
     position: absolute;
     left: -120px;
-    overflow: hidden;
+    overflow-x: hidden;
     overflow-y: scroll;
-    -webkit-transition: left .3s;
     transition: left .3s;
     min-height: 320px;
     animation: bounce-in-sidebarNav 2.5s;
+    &::-webkit-scrollbar {
+         width: 0 !important
+    }
 }
 
 @media (min-width: 480px) {
