--- a/static/scss/test.scss
+++ b/static/scss/test.scss
@@ -29,6 +29,15 @@ a:focus {
     color: white !important;
 }
 
+::-webkit-scrollbar {
+    width: 5px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+/* optional: show position indicator in violette in case ::-webkit-scrollbar gets a width > 0px */
+::-webkit-scrollbar-thumb {
+    background: #44535A;
+}
+
 // set to height 100% for safety reasons as quite all child elements are positoned
 // absolute or floated and thus taken out of the document flow
 .pagesRootContainer {
